syntax = "proto3";

package ypb;
option go_package = "/;ypb";
import "message_api.proto";

service ExportApi {
  rpc ExtractDataToFile(stream ExtractDataToFileRequest) returns (stream ExtractDataToFileResult);
}

message ExtractableData {
  string StringValue = 1;
  bytes BytesValue = 2;
}

message ExtractDataToFileRequest {
  bool JsonOutput = 1;
  bool CSVOutput = 2;
  string DirName = 3;

  map<string, ExtractableData> Data = 4;
  string FileNamePattern = 5;

  // 当没有数据的时候，执行这个即可
  bool Finished = 6;
}

message ExtractDataToFileResult {
  string FilePath = 1;
}